# any2json

./: .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  WORKSPACE  echo  notes.md  pyproject.toml  queries.md  streamlit.py
.cursor/rules/: explanations.mdc
any2json/: containers.py  dataset_processors.py  encoder.py  enums.py  grouping.py  index.py  infinigram.py  schema_utils.py  utils.py
any2json/agents/: chunk_generator.py  schema_generator.py
any2json/benchmarks/: benchmark.py  benchmark_ui.py
any2json/benchmarks/models/: gemini.py  qwen.py  vllm_custom.py  vllm_server_mixin.py
any2json/data_engine/: agents.py  generators.py  helpers.py  utils.py
any2json/data_engine/generators/: base.py  generator_utils.py  vary_schema.py
any2json/data_engine/generators/converters/: converters.py  utils.py  yaml.py
any2json/data_engine/generators/format_conversion/: yaml.py
any2json/data_engine/generators/synthetic/: pandas_generator.py
any2json/database/: client.py  helpers.py  models.py  utils.py
any2json/models/: __init__.py  gemini.py  gemma3n.py  qwen.py
any2json/training/: augment.py  callbacks.py  constants.py  dataset.py  qwen.py  submit_runpod.py  train.py  utils.py
benchmark_results/: config.json  errors.json  metrics.json  results.json
data/: database.db
notebooks/: any2json_benchmark.ipynb  any2json_train.ipynb
queries/: delete_sql_chunks.sql  explore_groups.sql
scripts/: README_benchmark.md  benchmark.py  config_gemma.env  config_smollm.env  config_smollm_f2yvr0zy.env  config_smollm_i7dfz4h2.env  data_engine.py  dataset_explorer_ui.py  db_tools.py  debug.ipynb  download_datasets.py  generate_input_json_chunks.py  generate_json_chunks.py  generate_pandas_chunks.py  generate_samples.py  generate_samples_from_chunks.py  generate_schemas_for_chunks.py  generate_synthetic_format_conversions.py  generate_synthetic_schemas.py  get_json_chunks_infinigram.py  inference.ipynb  load_documents.py  notes.md  pod_benchmark.sh  pod_benchmark_gemma.sh  pod_benchmark_smollm.sh  pod_hello_world.sh  pod_train.sh  samples_to_hf_dataset.py  submit_runpod.py  ui.py  wandb_tools.py
tests/: test_augmentation.py  test_converters.py  test_extract_sub_jsons.py  test_group_assignment.py  test_llm_utils.py  test_metrics.py  test_schema_extraction.py  test_schema_utils.py  test_supported_schema.py  test_utils.py
