load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

container_image(
    name = "any2json_image",
    base = "@runpod_pytorch_base//image",
    directory = "/code",
    files = glob(["**"]),
    workdir = "/code/any2json",
    cmd = ["/bin/bash"],
)

container_push(
    name = "push_image",
    image = ":any2json_image",
    registry = "index.docker.io",
    repository = "btseytlin/any2json",
    tag = "latest",
)