load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")

oci_image(
    name = "any2json_image",
    base = "@base_image",
    tars = [":add_any2json_files"],
)

genrule(
    name = "add_any2json_files",
    srcs = glob(["**"]),
    outs = ["any2json_layer.tar"],
    cmd = "mkdir -p code/any2json && cp -r $(SRCS) code/any2json/ && tar -cf $@ code/",
)

oci_push(
    name = "push_any2json_image",
    image = ":any2json_image",
    repository = "index.docker.io/boristseitlin/any2json",
    remote_tags = ["latest"]
)