[project]
name = "any2json"
version = "0.1.0"
description = "Convert anything to JSON"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atomic-agents>=1.0.19",
    "click>=8.2.1",
    "datasets>=3.6.0",
    "fastjsonschema>=2.21.1",
    "google-genai>=1.18.0",
    "httpx>=0.28.1",
    "instructor>=1.6.4",
    "jsonref>=1.1.0",
    "openai>=1.0.0",
    "pydantic>=2.11.5",
    "pydantic-ai>=0.2.12",
    "pytest>=8.0.0",
    "streamlit>=1.45.1",
    "toml>=0.10.2",
    "transformers>=4.52.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["any2json*"]

