[project]
name = "any2json"
version = "0.1.0"
description = "Convert anything to JSON"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "atomic-agents>=1.0.19",
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "datasets>=3.6.0",
    "faker>=37.3.0",
    "fastjsonschema>=2.21.1",
    "google-genai>=1.18.0",
    "httpx>=0.28.1",
    "instructor>=1.6.4",
    "jsonref>=1.1.0",
    "jsonschema-pydantic>=0.6",
    "openai>=1.0.0",
    "pydantic>=2.11.5",
    "pydantic-ai>=0.2.12",
    "pytest>=8.0.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "tabulate>=0.9.0",
    "toml>=0.10.2",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "trl>=0.18.1",
    "warcio>=1.7.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["any2json*"]

