[project]
name = "any2json"
version = "0.1.0"
description = "Convert anything to JSON"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "atomic-agents>=1.0.19",
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "datasets>=3.6.0",
    "faker>=37.3.0",
    "fastjsonschema>=2.21.1",
    "google-genai>=1.24.0",
    "pydantic-ai>=0.3.6",
    "httpx>=0.28.1",
    "instructor>=1.6.4",
    "jsonref>=1.1.0",
    "jsonschema-pydantic>=0.6",
    "openai>=1.0.0",
    "vllm>=0.9.0,<0.10.0",
    "pydantic>=2.11.5",
    "pytest>=8.0.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "tabulate>=0.9.0",
    "toml>=0.10.2",
    "torch>=2.7.0,<2.8",
    "transformers<=4.53.3",
    "trl>=0.18.1",
    "warcio>=1.7.5",
    "tenacity>=8.5.0",
    "bm25s>=0.2.13",
    "pystemmer>=3.0.0",
    "lxml>=6.0.0",
    "markdownify>=1.1.0",
    "markdown>=3.8.2",
    "dicttoxml>=1.7.16",
    "xmltodict>=0.14.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["any2json*"]

